# sos

./: .gitignore  CMakeLists.txt  Function.cpp  Function.h  README.md  compiled  function.cpp  function.h  index.html  instructions.cpp  instructions.h  main.cpp  sourcefunction.cpp  sourcefunction.h  test.txt  test.🆘c  util.cpp  util.h  variablestack.cpp  variablestack.h
_sosbuild/: test.🆘🥐
_sossource/: test.🆘
example/: gamble.🆘  gamble.🆘🥐
function/: function.h  nativefunction.h  sourcefunction.h
sosbuild/: build.txt
sosc/: ParserGrammar.txt  ParserLanguage.txt  build.gradle  gradlew  nativefunction.cpp  output.txt  settings.gradle  sos  test.txt
sosc/src/main/kotlin/: Emoji.kt  Main.kt  OldParser.kt  Parser.kt  ParserOld.kt  Token.kt  TokenType.kt
sossource/: source.txt
src/: SosLoader.cpp  SosLoader.h  instructions.cpp  instructions.h  main.cpp  sosexception.h  util.cpp  variablestack.cpp  variablestack.h
src/function/: function.h  nativefunction.cpp  nativefunction.h  sourcefunction.cpp  sourcefunction.h
